// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Report stack matches the snapshot for CODE 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Reporting for mobile notifications",
  "Mappings": {
    "Constants": {
      "App": {
        "Value": "report",
      },
      "Stack": {
        "Value": "mobile-notifications",
      },
    },
    "StageVariables": {
      "CODE": {
        "InstanceType": "t4g.micro",
        "NotificationAlarmPeriod": 1200,
      },
      "PROD": {
        "InstanceType": "t4g.micro",
        "NotificationAlarmPeriod": 1200,
      },
    },
  },
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LoadBalancerUrl": {
      "Value": {
        "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
      },
    },
  },
  "Parameters": {
    "AMI": {
      "Description": "AMI used by the instances,",
      "Type": "AWS::EC2::Image::Id",
    },
    "ASGMaxSize": {
      "Description": "Maximum size of the autoscaling group",
      "Type": "Number",
    },
    "ASGMinSize": {
      "Description": "Minimum size of the autoscaling group",
      "Type": "Number",
    },
    "AppCertArn": {
      "Description": "ACM Certificate for app use",
      "Type": "String",
    },
    "DistBucket": {
      "Description": "The name of the s3 bucket containing the server artifact",
      "Type": "String",
    },
    "DomainName": {
      "Description": "The domain name of the ELB, should contain the trailing dot stuff.zone.example.com.",
      "Type": "String",
    },
    "HostedZone": {
      "Description": "The HostedZone, should contain the trailing dot zone.example.com.",
      "Type": "String",
    },
    "PrivateSubnets": {
      "Description": "The private subnets of the VPC for the autoscaling group",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "PublicSubnets": {
      "Description": "The public subnets of the VPC for the loadbalancer",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Description": "Environment name",
      "Type": "String",
    },
    "VPCSecurityGroup": {
      "Description": "The default security group of the VPC",
      "Type": "AWS::EC2::SecurityGroup::Id",
    },
    "VpcId": {
      "Description": "The VPC",
      "Type": "AWS::EC2::VPC::Id",
    },
  },
  "Resources": {
    "DnsRecord": {
      "Properties": {
        "HostedZoneName": {
          "Ref": "HostedZone",
        },
        "Name": {
          "Ref": "DomainName",
        },
        "ResourceRecords": [
          {
            "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
          },
        ],
        "TTL": "60",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "InstanceSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "SecurityGroupIngress": [
          {
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "LoadBalancerSecurityGroup",
            },
            "ToPort": 9000,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "ToPort": 9000,
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerToPrivateASG": {
      "Properties": {
        "CrossZone": true,
        "HealthCheck": {
          "HealthyThreshold": "2",
          "Interval": "30",
          "Target": "HTTP:9000/healthcheck",
          "Timeout": "10",
          "UnhealthyThreshold": "10",
        },
        "Listeners": [
          {
            "InstancePort": "9000",
            "LoadBalancerPort": "443",
            "Protocol": "HTTPS",
            "SSLCertificateId": {
              "Ref": "AppCertArn",
            },
          },
        ],
        "SecurityGroups": [
          {
            "Ref": "LoadBalancerSecurityGroup",
          },
        ],
        "Subnets": {
          "Ref": "PublicSubnets",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
    },
    "NotificationsReportInstanceProfile": {
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "NotificationsReportRole",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "NotificationsReportRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com",
                ],
              },
            },
          ],
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:aws:iam::\${AWS::AccountId}:policy/ssm-scala-v1",
          },
        ],
        "Path": "/",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:GetObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:s3:::\${DistBucket}/*",
                  },
                },
                {
                  "Action": "ec2:DescribeTags",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "cloudwatch:*",
                    "logs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "autoscaling:DescribeAutoScalingInstances",
                    "autoscaling:DescribeAutoScalingGroups",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "kinesis:PutRecord",
                    "kinesis:PutRecords",
                    "kinesis:DescribeStream",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:kinesis:\${AWS::Region}:\${AWS::AccountId}:stream/mobile-log-aggregation-\${Stage}",
                  },
                },
              ],
            },
            "PolicyName": "root",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "dynamodb:*",
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::Sub": "arn:aws:dynamodb:eu-west-1:\${AWS::AccountId}:table/mobile-notifications-reports-\${Stage}",
                    },
                    {
                      "Fn::Sub": "arn:aws:dynamodb:eu-west-1:\${AWS::AccountId}:table/mobile-notifications-reports-\${Stage}/index/*",
                    },
                  ],
                },
              ],
            },
            "PolicyName": "dynamo",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "ssm:GetParametersByPath",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": [
                      "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/notifications/\${Stage}/\${Stack}",
                      {
                        "Stack": {
                          "Fn::FindInMap": [
                            "Constants",
                            "Stack",
                            "Value",
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "PolicyName": "conf",
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PrivateReportAutoscalingGroup": {
      "Properties": {
        "AvailabilityZones": {
          "Fn::GetAZs": "",
        },
        "HealthCheckGracePeriod": 400,
        "HealthCheckType": "ELB",
        "LaunchConfigurationName": {
          "Ref": "ReportLaunchConfig",
        },
        "LoadBalancerNames": [
          {
            "Ref": "LoadBalancerToPrivateASG",
          },
        ],
        "MaxSize": {
          "Ref": "ASGMaxSize",
        },
        "MinSize": {
          "Ref": "ASGMinSize",
        },
        "NotificationConfiguration": {
          "NotificationTypes": [
            "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
            "autoscaling:EC2_INSTANCE_TERMINATE_ERROR",
          ],
          "TopicARN": {
            "Fn::Sub": "arn:aws:sns:eu-west-1:\${AWS::AccountId}:AutoscalingNotifications\${Stage}",
          },
        },
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "CODE",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "PrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "ReportLaunchConfig": {
      "Properties": {
        "AssociatePublicIpAddress": false,
        "IamInstanceProfile": {
          "Ref": "NotificationsReportInstanceProfile",
        },
        "ImageId": {
          "Ref": "AMI",
        },
        "InstanceType": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "InstanceType",
          ],
        },
        "MetadataOptions": {
          "HttpTokens": "required",
        },
        "SecurityGroups": [
          {
            "Ref": "InstanceSecurityGroup",
          },
          {
            "Ref": "VPCSecurityGroup",
          },
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": [
              "#!/bin/bash -ev
aws --region \${AWS::Region} s3 cp s3://\${DistBucket}/\${Stack}/\${Stage}/\${App}/\${App}_1.0-latest_all.deb /tmp
dpkg -i /tmp/\${App}_1.0-latest_all.deb
/opt/aws-kinesis-agent/configure-aws-kinesis-agent \${AWS::Region} mobile-log-aggregation-\${Stage} /var/log/\${App}/application.log
",
              {
                "App": {
                  "Fn::FindInMap": [
                    "Constants",
                    "App",
                    "Value",
                  ],
                },
                "Stack": {
                  "Fn::FindInMap": [
                    "Constants",
                    "Stack",
                    "Value",
                  ],
                },
              },
            ],
          },
        },
      },
      "Type": "AWS::AutoScaling::LaunchConfiguration",
    },
  },
}
`;

exports[`The Report stack matches the snapshot for PROD 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Reporting for mobile notifications",
  "Mappings": {
    "Constants": {
      "App": {
        "Value": "report",
      },
      "Stack": {
        "Value": "mobile-notifications",
      },
    },
    "StageVariables": {
      "CODE": {
        "InstanceType": "t4g.micro",
        "NotificationAlarmPeriod": 1200,
      },
      "PROD": {
        "InstanceType": "t4g.micro",
        "NotificationAlarmPeriod": 1200,
      },
    },
  },
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LoadBalancerUrl": {
      "Value": {
        "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
      },
    },
  },
  "Parameters": {
    "AMI": {
      "Description": "AMI used by the instances,",
      "Type": "AWS::EC2::Image::Id",
    },
    "ASGMaxSize": {
      "Description": "Maximum size of the autoscaling group",
      "Type": "Number",
    },
    "ASGMinSize": {
      "Description": "Minimum size of the autoscaling group",
      "Type": "Number",
    },
    "AppCertArn": {
      "Description": "ACM Certificate for app use",
      "Type": "String",
    },
    "DistBucket": {
      "Description": "The name of the s3 bucket containing the server artifact",
      "Type": "String",
    },
    "DomainName": {
      "Description": "The domain name of the ELB, should contain the trailing dot stuff.zone.example.com.",
      "Type": "String",
    },
    "HostedZone": {
      "Description": "The HostedZone, should contain the trailing dot zone.example.com.",
      "Type": "String",
    },
    "PrivateSubnets": {
      "Description": "The private subnets of the VPC for the autoscaling group",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "PublicSubnets": {
      "Description": "The public subnets of the VPC for the loadbalancer",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Description": "Environment name",
      "Type": "String",
    },
    "VPCSecurityGroup": {
      "Description": "The default security group of the VPC",
      "Type": "AWS::EC2::SecurityGroup::Id",
    },
    "VpcId": {
      "Description": "The VPC",
      "Type": "AWS::EC2::VPC::Id",
    },
  },
  "Resources": {
    "DnsRecord": {
      "Properties": {
        "HostedZoneName": {
          "Ref": "HostedZone",
        },
        "Name": {
          "Ref": "DomainName",
        },
        "ResourceRecords": [
          {
            "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
          },
        ],
        "TTL": "60",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "InstanceSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "SecurityGroupIngress": [
          {
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "LoadBalancerSecurityGroup",
            },
            "ToPort": 9000,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "ToPort": 9000,
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerToPrivateASG": {
      "Properties": {
        "CrossZone": true,
        "HealthCheck": {
          "HealthyThreshold": "2",
          "Interval": "30",
          "Target": "HTTP:9000/healthcheck",
          "Timeout": "10",
          "UnhealthyThreshold": "10",
        },
        "Listeners": [
          {
            "InstancePort": "9000",
            "LoadBalancerPort": "443",
            "Protocol": "HTTPS",
            "SSLCertificateId": {
              "Ref": "AppCertArn",
            },
          },
        ],
        "SecurityGroups": [
          {
            "Ref": "LoadBalancerSecurityGroup",
          },
        ],
        "Subnets": {
          "Ref": "PublicSubnets",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
    },
    "NotificationsReportInstanceProfile": {
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "NotificationsReportRole",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "NotificationsReportRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com",
                ],
              },
            },
          ],
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:aws:iam::\${AWS::AccountId}:policy/ssm-scala-v1",
          },
        ],
        "Path": "/",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:GetObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:s3:::\${DistBucket}/*",
                  },
                },
                {
                  "Action": "ec2:DescribeTags",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "cloudwatch:*",
                    "logs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "autoscaling:DescribeAutoScalingInstances",
                    "autoscaling:DescribeAutoScalingGroups",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "kinesis:PutRecord",
                    "kinesis:PutRecords",
                    "kinesis:DescribeStream",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:kinesis:\${AWS::Region}:\${AWS::AccountId}:stream/mobile-log-aggregation-\${Stage}",
                  },
                },
              ],
            },
            "PolicyName": "root",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "dynamodb:*",
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::Sub": "arn:aws:dynamodb:eu-west-1:\${AWS::AccountId}:table/mobile-notifications-reports-\${Stage}",
                    },
                    {
                      "Fn::Sub": "arn:aws:dynamodb:eu-west-1:\${AWS::AccountId}:table/mobile-notifications-reports-\${Stage}/index/*",
                    },
                  ],
                },
              ],
            },
            "PolicyName": "dynamo",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "ssm:GetParametersByPath",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": [
                      "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/notifications/\${Stage}/\${Stack}",
                      {
                        "Stack": {
                          "Fn::FindInMap": [
                            "Constants",
                            "Stack",
                            "Value",
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "PolicyName": "conf",
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PrivateReportAutoscalingGroup": {
      "Properties": {
        "AvailabilityZones": {
          "Fn::GetAZs": "",
        },
        "HealthCheckGracePeriod": 400,
        "HealthCheckType": "ELB",
        "LaunchConfigurationName": {
          "Ref": "ReportLaunchConfig",
        },
        "LoadBalancerNames": [
          {
            "Ref": "LoadBalancerToPrivateASG",
          },
        ],
        "MaxSize": {
          "Ref": "ASGMaxSize",
        },
        "MinSize": {
          "Ref": "ASGMinSize",
        },
        "NotificationConfiguration": {
          "NotificationTypes": [
            "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
            "autoscaling:EC2_INSTANCE_TERMINATE_ERROR",
          ],
          "TopicARN": {
            "Fn::Sub": "arn:aws:sns:eu-west-1:\${AWS::AccountId}:AutoscalingNotifications\${Stage}",
          },
        },
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "PROD",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "PrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "ReportLaunchConfig": {
      "Properties": {
        "AssociatePublicIpAddress": false,
        "IamInstanceProfile": {
          "Ref": "NotificationsReportInstanceProfile",
        },
        "ImageId": {
          "Ref": "AMI",
        },
        "InstanceType": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "InstanceType",
          ],
        },
        "MetadataOptions": {
          "HttpTokens": "required",
        },
        "SecurityGroups": [
          {
            "Ref": "InstanceSecurityGroup",
          },
          {
            "Ref": "VPCSecurityGroup",
          },
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": [
              "#!/bin/bash -ev
aws --region \${AWS::Region} s3 cp s3://\${DistBucket}/\${Stack}/\${Stage}/\${App}/\${App}_1.0-latest_all.deb /tmp
dpkg -i /tmp/\${App}_1.0-latest_all.deb
/opt/aws-kinesis-agent/configure-aws-kinesis-agent \${AWS::Region} mobile-log-aggregation-\${Stage} /var/log/\${App}/application.log
",
              {
                "App": {
                  "Fn::FindInMap": [
                    "Constants",
                    "App",
                    "Value",
                  ],
                },
                "Stack": {
                  "Fn::FindInMap": [
                    "Constants",
                    "Stack",
                    "Value",
                  ],
                },
              },
            ],
          },
        },
      },
      "Type": "AWS::AutoScaling::LaunchConfiguration",
    },
  },
}
`;
